--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 .first-section{
+    display: flex;
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
     margin-top: 30px;
+    margin-bottom: 170px;
 }
 .container h1{
     font-size: 50px;
@@ -24,9 +26,7 @@ body{
     font-size: 50px;
     color: orange;
 }
-.first-section{
-    display: flex;
-}
+
 .container{
     width: 50%;
     padding-left: 5%;
@@ -42,4 +42,14 @@ body{
     padding: 10px 20px;
     border-radius: 5px;
     color: #fff;
+}
+
+/* section2 */
+
+.second-section{
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-right: 110px;
+    display: flex;
 }
