--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
     margin-top: 30px;
-    margin-bottom: 170px;
+    margin-bottom: 150px;
 }
 .container h1{
     font-size: 50px;
@@ -47,9 +47,66 @@ body{
 /* section2 */
 
 .second-section{
+    margin-bottom: 150px;
     background-image: url(image/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 110px;
     display: flex;
+}
+
+/* third section */
+.experince-area{
+    background-image: url(image/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-bottom: 150px;
+}
+.experince-area h1{
+    font-size: 50px;
+}
+.third-section{
+    display: flex;
+    margin-left: 5%;
+    padding-right: 5%;
+}
+
+.third-section h2{
+    font-size: 35px;
+}
+
+.third-section h3{
+    font-size: 25px;
+    color: peru;
+}
+.third-section p{
+    font-size: 17px;
+}
+
+.witch{
+    width: 45%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 5%;
+    box-shadow: 10px 10px 40px rgb(112, 112, 111);
+    border-radius: 15px;
+}
+
+#web-deb{
+    border-radius: 5px;
+    border-left: 5px solid;
+    border-image: linear-gradient(cyan, blue);
+    border-image-slice: 1;
+}
+#web-deb-2{
+    border-radius: 5px;
+    border-left: 5px solid;
+    border-image: linear-gradient(orange, cyan);
+    border-image-slice: 1;
+}
+
+/* footer */
+footer p{
+    text-align: center;
+    color: rgb(52, 0, 100);
 }
